--- a/libs/shared/ui/pack-selector/src/lib/pack-selector.component.html
+++ b/libs/shared/ui/pack-selector/src/lib/pack-selector.component.html
@@ -1,114 +1,182 @@
-<div class='p-4'>
-  <div mat-dialog-title>
-    <div class='d-flex align-items-center justify-content-between'>
-      <h4 class='mat-h4 text-uppercase text-color__primary mb-3 mr-4 font-calibri font-weight-normal'>
-        PACK LISTING</h4>
+<div mat-dialog-title>
+  <div class='d-flex align-items-center justify-content-between'>
+    <h4 class='mat-h4 text-uppercase text-color__primary mb-0 mr-4 font-calibri font-weight-normal'>ADD PACK</h4>
+    <div class='d-flex align-items-center'>
+      <div class='d-flex align-items-center text-muted mt-1 mr-3'>
+        <mat-icon class='text-success mr-2'>autorenew</mat-icon>
+        <h4 class='text-success mat-h4 mb-0'>Selection Auto-Saved</h4>
+      </div>
+      <button mat-icon-button mat-dialog-close>
+        <mat-icon>close</mat-icon>
+      </button>
     </div>
   </div>
-  <div class='container-fluid p-0'>
-    <div class='row'>
-      <div class='col-3'>
-        <mat-form-field class='w-100'>
-          <mat-label>Search</mat-label>
-          <input matInput>
-        </mat-form-field>
-      </div>
+</div>
+
+<div class='container-fluid p-0'>
+  <div class='row'>
+    <div class='col-3'>
+      <mat-form-field class='w-100'>
+        <mat-label>Search</mat-label>
+        <input matInput autocomplete='off' [formControl]='filters.controls.search'>
+        <button mat-icon-button matSuffix *ngIf='filters.controls.search.value'
+                (click)='filters.controls.search.setValue("")'>
+          <mat-icon style='font-size: 14px'>close</mat-icon>
+        </button>
+      </mat-form-field>
     </div>
+    <div class='col d-flex align-items-center justify-content-end'>
+      <mat-spinner class='mr-4' [diameter]='20' *ngIf='store.isLoading$ | async'></mat-spinner>
+    </div>
+  </div>
+  <div class='row'>
+    <div class='col-12'>
+      <div mat-dialog-content>
+        <mat-card class='p-0'>
+          <div class='container-fluid p-0'>
+            <div class='row'>
+              <div class='col-12'>
+                <table mat-table [dataSource]='packs' class='w-100' [trackBy]='trackById'>
 
-    <div class='row'>
-      <div class='col-12'>
-        <div mat-dialog-content>
-          <mat-card class='p-0 mt-2'>
-            <div class='container-fluid p-0'>
-              <div class='row'>
-                <div class='col-12'>
-                  <table mat-table [dataSource]='packSelector' class='w-100'>
-                    <ng-container matColumnDef='select'>
-                      <th mat-header-cell *matHeaderCellDef>
-                      </th>
-                      <td mat-cell *matCellDef='let test'>
-                        <mat-checkbox
-                          color='primary'
-                          (click)='$event.stopPropagation()'>
-                        </mat-checkbox>
-                      </td>
-                    </ng-container>
+                  <ng-container matColumnDef='select'>
+                    <th mat-header-cell *matHeaderCellDef>
+                    </th>
+                    <td mat-cell *matCellDef='let pack'>
+                      <mat-checkbox
+                        [disabled]='(store.isLoading$ | async) || (store.isActing$ | async)'
+                        color='primary'
+                        (change)='$event ? addToList(pack) : null'
+                        (click)='$event.stopPropagation()'
+                        [checked]='isSelected(pack)'>
+                      </mat-checkbox>
+                    </td>
+                  </ng-container>
 
-                    <ng-container matColumnDef='name'>
-                      <th mat-header-cell *matHeaderCellDef>
-                        <div class='d-flex align-items-center justify-content-between'>
-                  <span>
-                    {{constantDataService.FIELD_NAME.NAME | titlecase}}
-                  </span>
-                          <div class='d-flex align-items-center'>
-                            <mat-icon
-                              style='font-size: 16px; margin-bottom: -8px; width: 16px;'>{{true ? "keyboard_arrow_up" : "keyboard_arrow_down"}}</mat-icon>
-                            <button mat-icon-button class='mr-3'>
-                              <mat-icon style='font-size: 20px'>sort_by_alpha</mat-icon>
-                            </button>
-                          </div>
+                  <ng-container matColumnDef='id'>
+                    <th mat-header-cell [width]='70' *matHeaderCellDef>ID</th>
+                    <td mat-cell *matCellDef='let element'> {{element.id ?? '--'}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef='name'>
+                    <th mat-header-cell *matHeaderCellDef>
+                      <hidden-innovation-sorting-header-name
+                        [title]='constantDataService.FIELD_NAME.NAME | titlecase'
+                        [ctrlEnabled]='filters.controls.nameSort?.enabled'
+                        [ctrlValue]='filters.controls.nameSort?.value'
+                        [isDisabled]='(store.isActing$ | async)'
+                        (emitSorting)='updateSorting("nameSort")'
+                      ></hidden-innovation-sorting-header-name>
+                    </th>
+                    <td mat-cell *matCellDef='let element'
+                        [matTooltip]='element.name'> {{(element.name | maxStringLimit) || '--'}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef='updated_at'>
+                    <th mat-header-cell *matHeaderCellDef>
+                      <hidden-innovation-sorting-header-date
+                        [title]='constantDataService.FIELD_NAME.DATE_ADDED | titlecase'
+                        [ctrlEnabled]='filters.controls.dateSort?.enabled'
+                        [ctrlValue]='filters.controls.dateSort?.value'
+                        [isDisabled]='(store.isActing$ | async)'
+                        (emitSorting)='updateSorting("dateSort")'
+                      ></hidden-innovation-sorting-header-date>
+                    </th>
+                    <td mat-cell *matCellDef='let element'> {{(element.updated_at | date: 'shortDate') || '--'}}</td>
+                  </ng-container>
+                  <ng-container matColumnDef='lessons'>
+                    <th mat-header-cell
+                        *matHeaderCellDef>
+                      <div class='d-flex align-items-center justify-content-between'>
+                        <span>
+                         Lessons
+                        </span>
+                      </div>
+                    </th>
+                    <td mat-cell *matCellDef='let element'> {{((element.lessons?.length) || 0)}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef='content'>
+                    <th mat-header-cell
+                        *matHeaderCellDef>
+                      <div class='d-flex align-items-center justify-content-between'>
+                        <span>
+                        Content
+                        </span>
+                      </div>
+                    </th>
+                    <td mat-cell *matCellDef='let element'> {{((element.content?.length) || 0)}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef='status'>
+                    <th mat-header-cell
+                        *matHeaderCellDef>
+                      <div class='d-flex align-items-center justify-content-between'>
+                        <span>
+                          {{constantDataService.FIELD_NAME.STATUS | titlecase}}
+                        </span>
+                        <div class='d-flex align-items-center'>
+                          <button mat-icon-button class='mr-3'
+                                  color='{{filters.controls.published?.value ? "primary" : ""}}'
+                                  [matMenuTriggerFor]='statusMenu'
+                                  [disabled]='(store.isActing$ | async)'
+                                  color='{{filters.controls.published?.value ? "primary" : ""}}'>
+                            <mat-icon style='font-size: 20px'>filter_list</mat-icon>
+                          </button>
+                          <mat-menu #statusMenu='matMenu'>
+                            <mat-selection-list color='primary'
+                                                (selectionChange)='updateFilterChange($event, filters.controls.published)'
+                                                [multiple]='false' class='pt-0'>
+                              <mat-list-option [value]='"TRUE"'>
+                                {{publishStatusEnum.PUBLISHED | titlecase}}
+                              </mat-list-option>
+                              <mat-list-option [value]='"FALSE"'>
+                                {{publishStatusEnum.UNPUBLISHED | titlecase}}
+                              </mat-list-option>
+                              <mat-list-option [value]='undefined'>
+                                Clear
+                              </mat-list-option>
+                            </mat-selection-list>
+                          </mat-menu>
                         </div>
-                      </th>
-                      <td mat-cell *matCellDef='let element'
-                          [matTooltip]='element.name'> {{(element.name | maxStringLimit) || '--'}} </td>
-                    </ng-container>
+                      </div>
+                    </th>
+                    <td mat-cell *matCellDef='let element'>
+                      <hidden-innovation-common-data-field-status
+                        [chipType]='element.isPublished ? statusChipType.SUCCESS : statusChipType.WARNING'
+                        [text]='((element.isPublished ? publishStatusEnum.PUBLISHED : publishStatusEnum.UNPUBLISHED)  | titlecase)'
+                      ></hidden-innovation-common-data-field-status>
+                    </td>
+                  </ng-container>
 
-
-                    <ng-container matColumnDef='category'>
-                      <th mat-header-cell
-                          *matHeaderCellDef>
-                        <div class='d-flex align-items-center justify-content-between'>
-                  <span>
-                    {{constantDataService.FIELD_NAME.CATEGORY | titlecase}}
-                  </span>
-                          <div class='d-flex align-items-center'>
-                            <button mat-icon-button class='mr-3' [matMenuTriggerFor]='typeMenu'
-
-                                    color='{{filters.controls.category?.value ? "primary" : ""}}'>
-                              <mat-icon style='font-size: 20px'>filter_list</mat-icon>
-                            </button>
-                            <mat-menu #typeMenu='matMenu'>
-                              <mat-selection-list color='primary'
-                                                  [multiple]='true' class='pt-0'>
-                                <mat-list-option *ngFor='let cat of tagCategoryIte' [value]='cat'>
-                                  <h6 class='mat-h6'>{{cat | replaceUnderscore | titlecase}}</h6>
-                                </mat-list-option>
-                              </mat-selection-list>
-                            </mat-menu>
-                          </div>
-                        </div>
-                      </th>
-                      <td mat-cell *matCellDef='let element'> {{((element.category | titlecase) || '--')}} </td>
-                    </ng-container>
-
-
-                    <ng-container matColumnDef='updated_at'>
-                      <th mat-header-cell *matHeaderCellDef>
-                        <div class='d-flex align-items-center justify-content-between'>
-                  <span>
-                    {{constantDataService.FIELD_NAME.DATE_MODIFIED| titlecase}}
-                  </span>
-                          <div class='d-flex align-items-center'>
-                            <button mat-icon-button class='mr-3'>
-                              <mat-icon
-                                style='font-size: 20px;'>{{true ? "arrow_upward" : "arrow_downward"}}</mat-icon>
-                            </button>
-                          </div>
-                        </div>
-
-                      </th>
-                      <td mat-cell *matCellDef='let element'> {{(element.updated_at | date: 'shortDate') || '--'}}</td>
-                    </ng-container>
-
-                    <tr mat-header-row *matHeaderRowDef='displayedColumns' ></tr>
-                    <tr mat-row *matRowDef='let row; columns: displayedColumns;' class='row-react'></tr>
-                  </table>
-                </div>
+                  <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
+                  <tr mat-row *matRowDef='let row; columns: displayedColumns;'
+                      [ngClass]='{"active":isSelected(row)}'
+                      (click)='isLoading ? null : addToList(row)'
+                      class='row-react'></tr>
+                </table>
               </div>
             </div>
-          </mat-card>
-        </div>
+            <ng-template [ngIf]='store.isLoading$ | async' [ngIfElse]='noDataElse'></ng-template>
+            <ng-template #noDataElse>
+              <div class='row'>
+                <div class='col-12 d-flex align-items-center justify-content-center'>
+                  <h4 class='mat-h4 mb-0 my-2 font-calibri' *ngIf='noData | async'>No Results Found</h4>
+                </div>
+              </div>
+            </ng-template>
+          </div>
+        </mat-card>
       </div>
+    </div>
+  </div>
+  <div class='row'>
+    <div class='col-12'>
+      <mat-card class='p-0'>
+        <mat-paginator
+          [disabled]='store.isLoading$ | async'
+          [pageSize]='pageSize'
+          [length]='store.count$ | async'
+          [pageIndex]='paginatorIndex'
+          [pageSizeOptions]='pageSizeOptions'
+          (page)='pageEvent = $event; onPaginateChange($event)'
+        ></mat-paginator>
+      </mat-card>
     </div>
   </div>
 </div>
