--- a/libs/assessment/assessment-create/src/lib/assessment-create.component.html
+++ b/libs/assessment/assessment-create/src/lib/assessment-create.component.html
@@ -1,4 +1,4 @@
-<div class="p-4">
+<form class="p-4">
   <div class='container-fluid p-0'>
     <div class='row mb-4'>
       <div class='col-12 d-flex align-items-center justify-content-end'>
@@ -11,8 +11,8 @@
         <button
           mat-flat-button
           class='ml-3'
-          color='primary' type='submit'>
-          {{'Save'}}
+          color='primary' type='submit' [disabled]='(store.isLoading$ | async ) || (store.isActing$ | async)'>
+          Save
         </button>
       </div>
     </div>
@@ -30,10 +30,10 @@
                 </div>
                 <div class='row mb-2'>
                   <div class='col-12'>
-                    <mat-form-field class="w-100" appearance="fill">
-                      <mat-label>About</mat-label>
-                      <textarea matInput placeholder="eg."></textarea>
-                    </mat-form-field>
+                    <hidden-innovation-common-form-field-textarea
+                      [label]='constantDataService.FIELD_NAME.ABOUT | titlecase'
+                      controlPath='label'
+                    ></hidden-innovation-common-form-field-textarea>
                   </div>
                 </div>
                 <div class='row mb-2'>
@@ -148,3 +148,4 @@
       </div>
     </div>
   </div>
+</form>
