--- a/libs/assessment/assessment-create/src/lib/assessment-create.component.html
+++ b/libs/assessment/assessment-create/src/lib/assessment-create.component.html
@@ -1,4 +1,4 @@
-<form class="p-4">
+<form class="p-4" >
   <div class='container-fluid p-0'>
     <div class='row mb-4'>
       <div class='col-12 d-flex align-items-center justify-content-end'>
@@ -38,26 +38,28 @@
                 </div>
                 <div class='row mb-2'>
                   <div class='col-12'>
-                    <mat-form-field class="w-100" appearance="fill">
-                      <mat-label>What you’ll get out of it</mat-label>
-                      <textarea matInput placeholder="eg. An understanding of your upper body strength"></textarea>
-                    </mat-form-field>
+                    <hidden-innovation-common-form-field-textarea
+                      [label]="'What you’ll get out of it'"
+                      [placeholder]="'eg. An understanding of your upper body strength'"
+                      controlPath='label'
+                    ></hidden-innovation-common-form-field-textarea>
                   </div>
                 </div>
                 <div class='row mb-2'>
                   <div class='col-12'>
-                    <mat-form-field class="w-100" appearance="fill">
-                      <mat-label>What you’ll need</mat-label>
-                      <textarea matInput placeholder="eg. Bench with safety, bar and various free weights."></textarea>
-                    </mat-form-field>
+                    <hidden-innovation-common-form-field-textarea
+                      [label]="'What you’ll need'"
+                      [placeholder]="'eg. Bench with safety, bar and various free weights.'"
+                      controlPath='label'
+                    ></hidden-innovation-common-form-field-textarea>
                   </div>
                 </div>
                 <div class='row mb-2'>
                   <div class='col-12'>
-                    <mat-form-field class="w-100" appearance="fill">
-                      <mat-label>How it works</mat-label>
-                      <textarea matInput placeholder="eg."></textarea>
-                    </mat-form-field>
+                    <hidden-innovation-common-form-field-textarea
+                      [label]="'How it works'"
+                      controlPath='label'
+                    ></hidden-innovation-common-form-field-textarea>
                   </div>
                 </div>
                 <div class='row mb-2'>
