--- a/libs/assessment/assessment-create/src/lib/assessment-create.component.html
+++ b/libs/assessment/assessment-create/src/lib/assessment-create.component.html
@@ -70,6 +70,19 @@
                     ></hidden-innovation-common-form-field>
                   </div>
                 </div>
+                <div class='row mb-3'>
+                  <div class='col-12'>
+                    <p class='text-muted mb-2'>Poster</p>
+                    <hidden-innovation-common-form-field-image
+                      controlPath='posterId'
+                      [setImageData]='(selectedImageData | async)'
+                      [aspectRatio]='aspectRatio.CUBE'
+                      [parentCtrl]='imageIDctrl'
+                      (emitImageCtrlData)='imageIDctrl?.setValue($event)'
+                      (emitRemoveImage)='imageIDctrl?.reset($event)'
+                    ></hidden-innovation-common-form-field-image>
+                  </div>
+                </div>
               </div>
             </mat-card-content>
           </mat-card>
