--- a/libs/shared/ui/dashboard-user-demographic/src/lib/dashboard-user-demographic.component.html
+++ b/libs/shared/ui/dashboard-user-demographic/src/lib/dashboard-user-demographic.component.html
@@ -16,12 +16,13 @@
               <canvas baseChart
                       chartType='bar'
                       [colors]='femaleAgeBarColor'
-                      [datasets]='femaleBarData'
+                      [datasets]='$any(femaleBarData)'
                       [labels]='ageLabels'
                       [legend]='chartLegend'
                       [options]='chartOptions'
               >
               </canvas>
+              {{femaleBarData}}
             </div>
           </div>
         </div>
@@ -44,11 +45,38 @@
                 baseChart
                 chartType='bar'
                 [colors]='maleAgeBarColor'
-                [datasets]='maleBarData'
+                [datasets]='$any(maleBarData)'
                 [labels]='ageLabels'
                 [legend]='chartLegend'
                 [options]='chartOptions'
               ></canvas>
+            </div>
+          </div>
+        </div>
+      </mat-card>
+    </div>
+    <div class='col-6'>
+      <mat-card class='pl-1'>
+        <div class='container-fluid p-0'>
+          <div class='row'>
+            <div class='col-12'>
+              <div class='d-flex align-items-center mb-3 pl-2'>
+                <mat-icon color='primary' class='mr-1 card-icon'>female</mat-icon>
+                <h4 class='mat-h4 mb-0 text-color__primary font-calibri'>Non Binary Age Group</h4>
+              </div>
+            </div>
+          </div>
+          <div class='row'>
+            <div class='col-12'>
+              <canvas baseChart
+                      chartType='bar'
+                      [colors]='nonBinaryAgeBarColor'
+                      [datasets]='$any(nonBinaryBarData)'
+                      [labels]='ageLabels'
+                      [legend]='chartLegend'
+                      [options]='chartOptions'
+              >
+              </canvas>
             </div>
           </div>
         </div>
@@ -75,7 +103,7 @@
                 baseChart
                 chartType='doughnut'
                 [colors]='doughnutChartColor'
-                [data]='ratioChartData'
+                [data]='$any(ratioChartData)'
                 [labels]='doughnutChartLabel'
                 [legend]='chartLegend'
               ></canvas>
@@ -89,7 +117,20 @@
                         <mat-icon>female</mat-icon>
                         <div class='d-flex flex-column align-items-center' [ngStyle]='{width: "calc(100% - 42px)"}'>
                           <h4 class='mat-h4 m-0'>Female</h4>
-                          <h1 class='mat-h1 m-0' [ngStyle]='{"color": colors.female}'>60 %</h1>
+                          <h1 class='mat-h1 m-0' [ngStyle]='{"color": colors.female}'>{{femalePercentage}} %</h1>
+                        </div>
+                      </div>
+                    </button>
+                  </div>
+                </div>
+                <div class='row mb-2'>
+                  <div class='col-12'>
+                    <button class='w-100' mat-stroked-button [ngStyle]='{"color": colors.other}'>
+                      <div class='d-flex align-items-center pt-1 py-0'>
+                        <mat-icon>male</mat-icon>
+                        <div class='d-flex flex-column align-items-center' [ngStyle]='{width: "calc(100% - 42px)"}'>
+                          <h4 class='mat-h4 m-0'>Non-Binary</h4>
+                          <h1 class='mat-h1 m-0' [ngStyle]='{"color": colors.other}'>{{nonBinaryPercentage}} %</h1>
                         </div>
                       </div>
                     </button>
@@ -102,7 +143,7 @@
                         <mat-icon>male</mat-icon>
                         <div class='d-flex flex-column align-items-center' [ngStyle]='{width: "calc(100% - 42px)"}'>
                           <h4 class='mat-h4 m-0'>Male</h4>
-                          <h1 class='mat-h1 m-0' [ngStyle]='{"color": colors.male}'>40 %</h1>
+                          <h1 class='mat-h1 m-0' [ngStyle]='{"color": colors.male}'>{{malePercentage}} %</h1>
                         </div>
                       </div>
                     </button>
