--- a/libs/assessment/assessment-listing/src/lib/assessment-listing.component.html
+++ b/libs/assessment/assessment-listing/src/lib/assessment-listing.component.html
@@ -45,8 +45,8 @@
                     <th mat-header-cell *matHeaderCellDef
                         [width]='100'>{{constantDataService.FIELD_NAME.ACTION | titlecase}}</th>
                     <td mat-cell *matCellDef='let row'>
-                      <button [disabled]='!row.id' mat-icon-button color='primary' class='my-2'
-                              [routerLink]="['/assessments','edit', row.id]">
+                      <button mat-icon-button color='primary' class='my-2'
+                              [routerLink]="['/assessments','edit', row.category]">
                         <mat-icon style='font-size: 16px'>create</mat-icon>
                       </button>
                     </td>
