--- a/libs/assessment/assessment-listing/src/lib/assessment-listing.component.html
+++ b/libs/assessment/assessment-listing/src/lib/assessment-listing.component.html
@@ -25,20 +25,20 @@
                     <td mat-cell *matCellDef='let element'> {{element.items || 0}}  </td>
                   </ng-container>
 
-                  <ng-container matColumnDef='worstCase'>
-                    <th mat-header-cell *matHeaderCellDef>Worst Case</th>
-                    <td mat-cell *matCellDef='let element'> {{element.worstCase || 0}}  </td>
-                  </ng-container>
+<!--                  <ng-container matColumnDef='worstCase'>-->
+<!--                    <th mat-header-cell *matHeaderCellDef>Worst Case</th>-->
+<!--                    <td mat-cell *matCellDef='let element'> {{element.worstCase || 0}}  </td>-->
+<!--                  </ng-container>-->
 
 
-                  <ng-container matColumnDef='bestCase'>
-                    <th mat-header-cell *matHeaderCellDef>Best Case</th>
-                    <td mat-cell *matCellDef='let element'> {{element.bestCase || 0}}  </td>
-                  </ng-container>
+<!--                  <ng-container matColumnDef='bestCase'>-->
+<!--                    <th mat-header-cell *matHeaderCellDef>Best Case</th>-->
+<!--                    <td mat-cell *matCellDef='let element'> {{element.bestCase || 0}}  </td>-->
+<!--                  </ng-container>-->
 
                   <ng-container matColumnDef='lockout'>
                     <th mat-header-cell *matHeaderCellDef>Lockout (days)</th>
-                    <td mat-cell *matCellDef='let element'> {{element.lockout || 0}}  </td>
+                    <td mat-cell *matCellDef='let element'> {{element.lockout ?? 0}}  </td>
                   </ng-container>
 
                   <ng-container matColumnDef='action'>
