--- a/libs/assessment/assessment-create/src/lib/assessment-create.component.html
+++ b/libs/assessment/assessment-create/src/lib/assessment-create.component.html
@@ -9,8 +9,8 @@
           Cancel
         </button>
         <button
-          [disabled]='(store.isLoading$ | async ) || (store.isActing$ | async)'
           (click)='submit()'
+          [disabled]='(store.isLoading$ | async ) || (store.isActing$ | async)'
           class='ml-3'
           color='primary' mat-flat-button type='submit'>
           Save
@@ -96,13 +96,16 @@
             <mat-divider></mat-divider>
             <mat-card-content class='content-container'>
               <hidden-innovation-pack-content-card
-                class='my-3'
+                (emitDeleteEvent)='uiStore.deleteSelectedContentPrompt(content)'
                 *ngFor='let content of (contentArrayCtrl.value$ | async); index as i; first as isFirst; last as isLast'
-                [ngClass]='{"mt-3" : isFirst, "mb-0": isLast }'
-                [name]='content.name'
                 [category]='content.type'
-                (emitDeleteEvent)='null'
+                [name]='content.name'
+                [ngClass]='{"mt-3" : isFirst, "mb-0": isLast }'
+                class='my-3'
               ></hidden-innovation-pack-content-card>
+              <div *ngIf='!contentArrayExists' class='d-flex align-items-center justify-content-center w-100 mt-3'>
+                <mat-hint><small>No Content Available</small></mat-hint>
+              </div>
             </mat-card-content>
             <mat-card-actions>
               <button [matMenuTriggerFor]='menuPack'
@@ -111,10 +114,10 @@
                 Add
               </button>
               <mat-menu #menuPack='matMenu'>
-                <button type='button' mat-menu-item (click)='openTestSelector()'>
+                <button (click)='openTestSelector()' mat-menu-item type='button'>
                   <span>Test Single</span>
                 </button>
-                <button type='button' mat-menu-item (click)='openQuestionnaireSelector()'>
+                <button (click)='openQuestionnaireSelector()' mat-menu-item type='button'>
                   <span>Questionnaire</span>
                 </button>
               </mat-menu>
