--- a/libs/assessment/assessment-listing/src/lib/assessment-listing.component.html
+++ b/libs/assessment/assessment-listing/src/lib/assessment-listing.component.html
@@ -22,7 +22,7 @@
 
                   <ng-container matColumnDef='test'>
                     <th mat-header-cell *matHeaderCellDef [width]="300">Tests</th>
-                    <td mat-cell *matCellDef='let element'> {{element.items || 0}}  </td>
+                    <td mat-cell *matCellDef='let element'> {{element.count || 0}}  </td>
                   </ng-container>
 
 <!--                  <ng-container matColumnDef='worstCase'>-->
