--- a/libs/pack/pack-create/src/lib/pack-create.component.html
+++ b/libs/pack/pack-create/src/lib/pack-create.component.html
@@ -221,9 +221,9 @@
           <mat-divider></mat-divider>
           <mat-card-content class='content-container'>
             <hidden-innovation-pack-content-card
-              class='mb-3'
+              class='my-3'
               *ngFor='let content of (contentArrayCtrl.value$ | async); index as i; first as isFirst; last as isLast'
-              [ngClass]='{"mt-2" : isFirst, "mb-0": isLast }'
+              [ngClass]='{"mt-3" : isFirst, "mb-0": isLast }'
               [name]='content.name'
               [category]='content.type'
               (emitDeleteEvent)='deleteSelectedContentPrompt(content)'
